<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/category_background"
    android:orientation="vertical"
    tools:context="com.example.android.favoritemusicplayer.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/fmp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        style="@style/PaddingCategoryStyle"
        android:background="@color/padding_category">

        <TextView
            android:id="@+id/favorite"
            style="@style/FavoriteCategoryStyle"
            android:background="@color/category"
            android:text="@string/favorite" />

    </LinearLayout>

    <LinearLayout
        style="@style/PaddingCategoryStyle"
        android:background="@color/padding_category">

        <TextView
            android:id="@+id/radio"
            style="@style/CategoryStyle"
            android:background="@color/category"
            android:text="@string/radio" />

    </LinearLayout>

    <LinearLayout
        style="@style/PaddingCategoryStyle"
        android:background="@color/padding_category">

        <TextView
            android:id="@+id/musicOnDevice"
            style="@style/CategoryStyle"
            android:background="@color/category"
            android:text="@string/music" />

    </LinearLayout>

    <LinearLayout
        style="@style/PaddingCategoryStyle"
        android:background="@color/padding_category">

        <TextView
            android:id="@+id/about"
            style="@style/CategoryStyle"
            android:background="@color/category"
            android:text="@string/about" />

    </LinearLayout>


    <LinearLayout
        style="@style/PaddingCategoryStyle"
        android:background="@color/padding_category">

        <TextView
            android:id="@+id/nowPlaying"
            style="@style/FavoriteCategoryStyle"
            android:background="@color/category"
            android:text="@string/now_playing" />

    </LinearLayout>

</LinearLayout>



