<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/category_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.favoritemusicplayer.FavoriteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/category_background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/about"
            style="@style/FavoritesActivityStyle"
            android:background="@color/category"
            android:text="@string/about" />

        <TextView
            android:id="@+id/ContentCategoryStyle_radio_search"
            style="@style/ContentCategoryStyle"
            android:background="@color/category"
            android:text="@string/about_content" />


        <TextView
            android:id="@+id/back_about"
            style="@style/ActivityStyleLinkBottom"
            android:background="@color/category"
            android:text="@string/back" />

    </LinearLayout>

</RelativeLayout>